code/force-app/main/default/objects/FinServ__GroupMemberSetting__mdt/fields/FinServ__Active__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if group member setting entry is active or not</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>