code/force-app/main/default/objects/FinServ__GroupMemberSetting__mdt/fields/FinServ__EditButtonCustomName__c.field-meta.xml
<CustomField>
    <fullName>FinServ__EditButtonCustomName__c</fullName>
    <description>Indicates the custom label name of the Edit button</description>
    <label>Edit Button Custom Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>