code/force-app/main/default/objects/FinServ__GroupMemberSetting__mdt/fields/FinServ__EditComponentName__c.field-meta.xml
<CustomField>
    <fullName>FinServ__EditComponentName__c</fullName>
    <description>Indicates the component name to be invoked for the Edit action.The component name should include namespace like NS:CMPNAME</description>
    <label>Edit Component Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>