code/force-app/main/default/objects/FinServ__GroupMemberSetting__mdt/fields/FinServ__HideRecordActions__c.field-meta.xml
<CustomField>
    <fullName>FinServ__HideRecordActions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the record actions has to be hidden</description>
    <label>Hide Record Actions</label>
    <type>Checkbox</type>
</CustomField>