code/force-app/main/default/objects/FinServ__GroupMemberSetting__mdt/fields/FinServ__NewButtonCustomName__c.field-meta.xml
<CustomField>
    <fullName>FinServ__NewButtonCustomName__c</fullName>
    <description>Indicates the custom label name of the New button</description>
    <label>New Button Custom Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>