code/force-app/main/default/objects/FinServ__GroupMemberSetting__mdt/fields/FinServ__NewComponentName__c.field-meta.xml
<CustomField>
    <fullName>FinServ__NewComponentName__c</fullName>
    <description>Indicates the component name to be invoked for the New action</description>
    <label>New Component Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>